<resources>
    <string name="app_name">My Application</string>
    <string name="emptyString" />
    <string name="lista_lekow">LISTA LEKÓW</string>
    <string name="zarejestruj">ZAREJESTRUJ</string>
    <string name="powrot_do_logowania">Wróć do logowania</string>
    <string name="potwierdz_haslo">Potwierdź hasło:</string>
    <string name="podaj_haslo">Podaj hasło:</string>
    <string name="podaj_nazwe_uzytkownika">Podaj nazwę użytkownika:</string>
    <string name="wprowadz_numer_telefonu">Wprowadź numer telefonu</string>
    <string name="wprowadz_imie">Wprowadź imię:</string>
    <string name="witaj">Witaj</string>
    <string name="co_chcial_bys_zrobic">co chciałbyś zrobic?</string>
    <string name="sprawdz_liste_lekow">Sprawdź listę leków</string>
    <string name="dodaj_lek">Dodaj lek</string>
    <string name="ustawienia_powiadomien">Ustawienia powiadomień</string>
    <string name="zmien_swoje_dane">Zmień swoje dane</string>
    <string name="nazwa_leku">Nazwa leku</string>
    <string name="nazwa">Nazwa</string>
    <string name="godziny_przyjmowania">Godziny przyjmowania</string>
    <string name="dodatkowe_informacje">Dodatkowe informacje</string>
    <string name="edytuj">EDYTUJ</string>
    <string name="usun">USUN</string>
    <string name="anuluj">ANULUJ</string>
    <string name="godzina_przyjmowania_leku">Godzina przyjmowania leku</string>
    <string name="zapisz">Zapisz</string>
    <string name="nazwa_uzytkownika">Nazwa użytkownika:</string>
    <string name="haslo">Hasło:</string>
    <string name="zaloguj">ZALOGUJ</string>
    <string name="utworz_nowe_konto">Utwórz nowe konto</string>
    <string name="image1">image1</string>
    <string name="leki_na_dzis">LEKI NA DZIŚ</string>
    <string name="konto_opiekuna">Konto opiekuna</string>
    <string name="ustawienia">USTAWIENIA</string>
    <string name="nazwa_applikacji">Twój Farmaceutyczny Pomocnik</string>
    <string name="uwaga_wez_lek">Uwaga! Weź teraz lek:</string>
    <string name="wziolem_lek">Wziąłem lek</string>
    <string name="czy_wziety">Lek nie został wzięty</string>
    <string name="wersja_jezykowa">WERSJA JĘZYKOWA</string>
    <string name="przed">przed posiłkiem</string>
    <string name="wtrakcie">w trakcie posiłku</string>
    <string name="twoj_pomocnik">Twój pomocnik</string>
    <string name="po_posilku">po posiłku</string>
    <string name="zapisano">Zapisano!</string>
    <string name="blede_haslo">Błędne hasło</string>
    <string name="wypelnione_pola">Wszystkie pola muszą być wypełnione</string>
    <string name="inne_hasla">Wpisane hasła nie są takie same</string>
    <string name="super_resjestracja">Rejestracja przebiegła pomyślnie, zaloguj się</string>
    <string name="zaktualizowano">Zaktualizowano</string>
    <string name="czy_chcesz_wyjsc">Czy na pewno chcesz wyjść?</string>
    <string name="tak">Tak</string>
    <string name="nie">Nie</string>
    <string name="lek_wziety">Lek został wzięty</string>
    <string name="lista_lekow_w_na_dzis">Lista leków na dziś:</string>
    <string name="usunieto">Usunięto</string>
    <string name="wylacz_powiadomienia">Wyłącz powiadomienia</string>
    <string name="ustaw_powiadomienie_dla_leku">Ustaw powiadomienie dla leku</string>
    <string name="wlacz_powadomienia">Włącz powadomienia</string>
    <string name="dawka_leku">Dawka leku</string>
    <string name="posi_ek_leku">Posiłek leku</string>
</resources>
