<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_ca8_edit_medicine"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.myapplication.CA8ShowMedicine"
    android:orientation="vertical">

    <TextView
        android:text="@string/nazwa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvName"
        android:textStyle="bold"
        android:textSize="25sp"/>

    <TextView
        android:text=""
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvMedName" />

    <TextView
        android:text="@string/godziny_przyjmowania"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvHours"
        android:textStyle="bold"
        android:textSize="25sp"/>

    <TextView
        android:text=""
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvMedHours" />

    <TextView
        android:text="@string/dodatkowe_informacje"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvAddInfo"
        android:textStyle="bold"
        android:textSize="25sp"/>

    <TextView
        android:text=""
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvMedAddInfo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/edytuj"
            android:id="@+id/bEdit"
            android:layout_weight="0.3"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/usun"
            android:id="@+id/bDelete"
            android:layout_weight="0.3"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/anuluj"
            android:id="@+id/bCancel"
            android:layout_weight="0.3"/>
    </LinearLayout>

</LinearLayout>
