<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/ustaw_powiadomienie_dla_leku"
        android:id="@+id/textView3"
        android:textSize="@dimen/small_text_size"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="23dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wlacz_powadomienia"
        android:id="@+id/start_alarm"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="60dp"
        android:layout_below="@+id/textView3"
        android:textSize="@dimen/small_text_size"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/alarmText" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wylacz_powiadomienia"
        android:id="@+id/stop_alarm"
        android:textSize="@dimen/small_text_size"
        android:layout_alignTop="@+id/start_alarm"
        android:layout_toEndOf="@+id/alarmText" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Text"
        android:textSize="@dimen/small_text_size"
        android:id="@+id/alarmText"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />
</RelativeLayout>