<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".CaregiverAccountActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/nazwa_uzytkownika"
        android:textSize="@dimen/small_text_size"
        android:id="@+id/TVusername"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="63dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ETusername"
        android:textSize="@dimen/small_text_size"
        android:layout_below="@+id/TVusername"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/haslo"
        android:textSize="@dimen/small_text_size"
        android:id="@+id/TVpassword"
        android:layout_below="@+id/ETusername"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:textSize="@dimen/small_text_size"
        android:id="@+id/ETpassword"
        android:layout_below="@+id/TVpassword"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zaloguj"
        android:id="@+id/ButLogIn"
        android:textSize="@dimen/small_text_size"
        android:layout_below="@+id/ETpassword"
        android:layout_marginTop="48dp"
        android:layout_alignRight="@+id/ETpassword"
        android:layout_alignEnd="@+id/ETpassword"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/utworz_nowe_konto"
        android:id="@+id/ButSetAccount"
        android:textSize="@dimen/small_text_size"
        android:layout_marginTop="48dp"
        android:layout_below="@+id/ButLogIn"
        android:layout_alignRight="@+id/ButLogIn"
        android:layout_alignEnd="@+id/ButLogIn"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
</RelativeLayout>
