<?xml version="1.0" encoding="utf-8"?>
<!-- przydałoby się zrobić scrollview, dotychczasowe próby spowodowały rozjezdzanie się przycisków -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".CaregiverRegister">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/wprowadz_imie"
        android:id="@+id/TvReg1_name"
        android:textSize="@dimen/small_text_size"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et1_name"
        android:textSize="@dimen/small_text_size"
        android:layout_below="@+id/TvReg1_name"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/wprowadz_numer_telefonu"
        android:textSize="@dimen/small_text_size"
        android:id="@+id/TvReg2_tel"
        android:layout_below="@+id/et1_name"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:textSize="@dimen/small_text_size"
        android:id="@+id/et2_tel"
        android:layout_below="@+id/TvReg2_tel"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/podaj_nazwe_uzytkownika"
        android:textSize="@dimen/small_text_size"
        android:id="@+id/TvReg3_username"
        android:layout_below="@+id/et2_tel"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et3_username"
        android:textSize="@dimen/small_text_size"
        android:layout_below="@+id/TvReg3_username"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/podaj_haslo"
        android:textSize="@dimen/small_text_size"
        android:id="@+id/TvReg4_password"
        android:layout_below="@+id/et3_username"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:textSize="@dimen/small_text_size"
        android:id="@+id/et4_pass"
        android:layout_below="@+id/TvReg4_password"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/potwierdz_haslo"
        android:id="@+id/TvReg5_confPass"
        android:textSize="@dimen/small_text_size"
        android:layout_below="@+id/et4_pass"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:textSize="@dimen/small_text_size"
        android:id="@+id/et5_pass2"
        android:layout_below="@+id/TvReg5_confPass"
        android:layout_centerHorizontal="true" />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zarejestruj"
        android:id="@+id/BReg1_Reg"
        android:textSize="25sp"
        android:onClick="registerOnClick"
        android:layout_below="@+id/et5_pass2"
        android:layout_marginTop="41dp"
        android:layout_alignRight="@+id/et5_pass2"
        android:layout_alignEnd="@+id/et5_pass2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView"
        android:layout_toEndOf="@+id/BReg1_Reg"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
